<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>iti.jets.gfive</groupId>

    <artifactId>ChatApp</artifactId>

    <version>1.0.0</version>

    <packaging>pom</packaging>

    <name>ChatApp</name>

    <modules>

        <module>ChatServer</module>
        <module>ChatClient</module>
        <module>ChatCommon</module>

    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <javafx.version>15.0.1</javafx.version>
        <ikonli.version>12.1.0</ikonli.version>
        <bootstrapfx.version>0.4.0</bootstrapfx.version>
        <controlsfx.version>11.0.3</controlsfx.version>
        <tilesfx.version>11.47</tilesfx.version>
        <mysql-connector.version>8.0.23</mysql-connector.version>
        <jfoenix.version>9.0.10</jfoenix.version>
        <commons.version>3.10</commons.version>
        <goldrenard-ab.version>1.0.3</goldrenard-ab.version>
        <fontawesomefx-fontawesome.version>4.7.0-9.1.2</fontawesomefx-fontawesome.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${ikonli.version}</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>


        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>${bootstrapfx.version}</version>
        </dependency>

        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>${tilesfx.version}</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql-connector.version}</version>
            <!--            <scope>runtime</scope>-->
        </dependency>

        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>${jfoenix.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.version}</version>
        </dependency>

        <dependency>
            <groupId>org.goldrenard</groupId>
            <artifactId>ab</artifactId>
            <version>${goldrenard-ab.version}</version>
        </dependency>

        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>${fontawesomefx-fontawesome.version}</version>
        </dependency>

    </dependencies>

    <repositories>

        <repository>
            <id>Central</id>
            <name>Central Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>

        <repository>
            <id>JCenter</id>
            <url>https://jcenter.bintray.com</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.5</version>
                    <configuration>
                        <launcher>hellofx</launcher>
                        <jlinkImageName>hello</jlinkImageName>
                        <mainClass>${project.artifactId}/${project.groupId}.NewMain</mainClass>
                        <options>
                            <!--===========================================CONTROL FX CONFIGS============================================-->
                            <!--                        Opening Controls-->
                            <option>--add-opens javafx.controls/javafx.scene.control.skin=org.controlsfx.controls
                            </option>
                            <!--                        Table Row expander Column-->
                            <option>--add-opens javafx.controls/javafx.scene.control.skin=org.controlsfx.controls
                            </option>
                            <!--                        Notification Pane Adding-->
                            <option>--add-exports javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
                            <option>--add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
                            </option>
                            <!--                        Auto complete binding adding-->
                            <option>--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                            <!--                        Glyph Font Adding-->
                            <option>--add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                            <!--===============================================JFOENIX CONFIGS========================================-->
                            <option>--add-opens java.base/java.lang.reflect=com.jfoenix</option>
                            <option>--add-opens javafx.graphics/javafx.css=com.jfoenix</option>
                            <option>--add-opens javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
                            </option>
                            <option>--add-opens javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
                            </option>
                            <option>--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                            <option>--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                            <option>--add-exports javafx.base/com.sun.javafx.event=com.jfoenix</option>
                            <!--                            <option>&#45;&#45;add-exports javafx.web/com.sun.webkit=ChatClient</option>-->
                            <!--                        &lt;!&ndash;                        JFOENIX demoduling &ndash;&gt;-->
                            <!--                        <option>&#45;&#45;add-exports com.jfoenix/com.jfoenix.controls.base=${groupId}.${artifactId}</option>-->
                            <!--                        <option>&#45;&#45;add-exports com.jfoenix/com.jfoenix.controls.base=iti.jets.gfive.ui.helpers.validation.Validator</option>-->
                        </options>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.2.4</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <shadedArtifactAttached>true</shadedArtifactAttached>
                                <transformers>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>${project.groupId}.NewMain</mainClass>
                                    </transformer>
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

</project>
